--- a/2203/examprep/codes.ipynb
+++ b/2203/examprep/codes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(321, -321)"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "reverse_integer(123), reverse_integer(-123)"
    ]
@@ -119,34 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0,1 --> 1,0\n",
-      "0,2 --> 2,0\n",
-      "1,2 --> 2,1\n",
-      "[[1 4 7]\n",
-      " [2 5 8]\n",
-      " [3 6 9]]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[7, 4, 1],\n",
-       "       [8, 5, 2],\n",
-       "       [9, 6, 3]])"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "def rotate_a_matrix(m): \n",
@@ -157,7 +121,6 @@
     "    \n",
     "    for i in range(n):\n",
     "        for j in range(i+1,n):\n",
-    "            print(f\"{i},{j} --> {j},{i}\")\n",
     "            m[i][j], m[j][i] = m[j][i], m[i][j]\n",
     "            \n",
     "    print(np.array(m))\n",
@@ -186,20 +149,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def split_integer(x:int)-> list:\n",
     "    splits = []\n",
@@ -210,6 +162,187 @@
     "    return splits[::-1]\n",
     "\n",
     "split_integer(12345)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Multiply two numbers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiply_two_strings(num1, num2): \n",
+    "    \n",
+    "    if \"0\" in [num1, num2]: \n",
+    "        return '0'\n",
+    "    \n",
+    "    # store the result \n",
+    "    result = [0] * (len(num1) + len(num2))\n",
+    "    \n",
+    "    num1 = num1[::-1]\n",
+    "    num2 = num2[::-1]\n",
+    "    \n",
+    "    for i in range(len(num1)):\n",
+    "        for j in range(len(num2)):\n",
+    "            digit = int(num1[i]) * int(num2[j])\n",
+    "            \n",
+    "            result[i+j] += digit\n",
+    "            carry, remaining = divmod(result[i+j], 10)\n",
+    "            # add carry \n",
+    "            result[i+j+1] += carry\n",
+    "            # keep remainder\n",
+    "            result[i+j] = remaining\n",
+    "                  \n",
+    "    result = result[::-1]\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "multiply_two_strings(\"12\",\"12\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Count and say**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_and_count(s:str): \n",
+    "    \n",
+    "    # result \n",
+    "    result = \"\"\n",
+    "    # lets set count = 1 : each element is at least repeted once\n",
+    "    count = 1\n",
+    "    \n",
+    "    for i in range(len(s)-1): \n",
+    "        \n",
+    "        if s[i] == s[i+1]: \n",
+    "            count += 1\n",
+    "        else:\n",
+    "            result = result + str(count) + str(s[i])\n",
+    "            count = 1\n",
+    "            \n",
+    "    # for the last digit \n",
+    "    result = result + str(count) + str(s[-1])\n",
+    "    \n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def solve(n): \n",
+    "    \n",
+    "    answer = \"1\"\n",
+    "    if n == 1 : return answer\n",
+    "    for _ in range(2, n+1):\n",
+    "        answer = convert_and_count(answer)\n",
+    "        \n",
+    "    return answer\n",
+    "\n",
+    "solve(2), solve(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**All Permutation**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "\n",
+    "def all_permutations(lst):\n",
+    "    \n",
+    "    result =  list(itertools.permutations(lst))\n",
+    "    \n",
+    "    return [list(x) for x in result]\n",
+    "\n",
+    "def find_next_permute(nums: list): \n",
+    "    \n",
+    "    \n",
+    "    # firstly lets sort list in natural order \n",
+    "    nums_sorted = sorted(nums)\n",
+    "    \n",
+    "    # get the all possible permutations \n",
+    "    perumtations = all_permutations(nums_sorted)\n",
+    "    \n",
+    "    # get the index of current \n",
+    "    \n",
+    "    index = perumtations.index(nums)\n",
+    "    \n",
+    "    if index != len(perumtations) -1: \n",
+    "        \n",
+    "        return permutations[index+1]\n",
+    "    else:\n",
+    "        permutations[0]\n",
+    "        \n",
+    "        \n",
+    "find_next_permute([1, 2, 3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ransom Note"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def counter(word):\n",
+    "    mapp = {}\n",
+    "    for i in word: \n",
+    "        mapp[i] = 1 + mapp.get(i, 0)        \n",
+    "    return mapp\n",
+    "\n",
+    "\n",
+    "def canConstruct(ransomNote, magazine):\n",
+    "    \n",
+    "    magazine_freq = counter(magazine)\n",
+    "\n",
+    "    ransomNote_freq = counter(ransomNote)\n",
+    "    \n",
+    "    for k , v in ransomNote_freq.items():\n",
+    "        \n",
+    "        if k in magazine_freq.keys():\n",
+    "            if ransomNote_freq[k] < magazine_freq[k]:\n",
+    "                return False\n",
+    "        else:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "print(canConstruct(\"a\", \"b\"))  \n",
+    "print(canConstruct(\"aa\", \"ab\"))  \n",
+    "print(canConstruct(\"aa\", \"aab\"))\n",
+    "\t\t"
    ]
   },
   {
@@ -233,20 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 1)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -275,20 +397,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['a', '1', 'b', '2', 'c', '3', '4', '5'], ['1', 'a', '2', 'b', '3', 'c', 'd'])"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def mergeAlternately(self, word1: str, word2: str) -> str:\n",
@@ -333,20 +444,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(True, False)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Solution:\n",
     "    def isSubsequence(self, s: str, t: str) -> bool:\n",
@@ -381,20 +481,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'flo'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def longest_prefix(s : list) -> str: \n",
     "    \n",
@@ -426,20 +515,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def best_stock_profit(prices : list) -> int: \n",
     "    \n",
@@ -471,20 +549,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1->3', '5']"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def find_summary_range(input_list : list) -> list:\n",
     "    \n",
@@ -524,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +600,7 @@
        "[1, 2, 2, 3, 5, 6]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,6 +626,135 @@
     "m,n = 3,3\n",
     "\n",
     "merge(nums1, m, nums2, n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import warnings \n",
+    "warnings.filterwarnings(\"ignore\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# practice questios: \n",
+    "\n",
+    "sample_string = \"The quick brown fox jumps over the lazy dog. Email: test.email+alex@leetcode.com or contact_us@company.org or. Visit https://www.example.com/path?query=123&lang=en or http://short.url for more info. Today is 2024-06-21. Call us at (123) 456-7890 or 123-456-7890. Hex color codes: #1a2b3c, #FFF, #123456. IPv4 addresses: 192.168.1.1, 255.255.255.255. Use password P@ssw0rd123! and reset it by 12:34 PM.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test.email+alex@leetcode.com', 'contact_us@company.org']\n",
+      "https://www.example.com/path?query=123&lang=en\n",
+      "http://short.url\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.findall(r\"[\\w\\d\\+\\.]+@\\w+\\.\\w{2,3}\",sample_string))\n",
+    "\n",
+    "url_pattern = r\"https?:\\/\\/(www\\.)?[^\\s\\/]+\\.[a-zA-Z]{2,}(\\/[\\S]+)?\"\n",
+    "x = re.finditer(url_pattern, sample_string)\n",
+    "for res in x:\n",
+    "    print(res.group())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 2, 3, 5, 6]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def isMatch(s: str, p: str) -> bool:\n",
+    "    # If the pattern is empty, the string must also be empty to be a match\n",
+    "    if not p:\n",
+    "        return not s\n",
+    "    \n",
+    "    # Determine if the first characters match or if the first character of the pattern is '.'\n",
+    "    first_char_matches = bool(s) and (s[0] == p[0] or p[0] == '.')\n",
+    "\n",
+    "    # Check if the second character in the pattern is '*'\n",
+    "    if len(p) >= 2 and p[1] == '*':\n",
+    "        # Two possibilities:\n",
+    "        # 1. '*' represents zero occurrences of the preceding character\n",
+    "        # 2. '*' represents one or more occurrences, and we continue matching the rest of the string\n",
+    "        return (isMatch(s, p[2:]) or (first_char_matches and isMatch(s[1:], p)))\n",
+    "    else:\n",
+    "        # No '*' in pattern, so check if the current characters match and continue with the next characters\n",
+    "        return first_char_matches and isMatch(s[1:], p[1:])\n",
+    "\n",
+    "# Test cases\n",
+    "print(isMatch(s=\"aa\", p=\"a*\"))         # True\n",
+    "print(isMatch(s=\"aaaaaaaaaa\", p=\"a*\")) # True\n",
+    "print(isMatch(s=\"aaaab\", p=\"a*\"))      # False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def is_match(s,p): \n",
+    "    if not p: \n",
+    "        return not s \n",
+    "    \n",
+    "    first_char_matches = bool(s) and (s[0] == p[0] or p[0]== \".\") \n",
+    "    \n",
+    "    if len(p) >= 2 and p[1] == \"*\":\n",
+    "        \n",
+    "        return (is_match(s, p[2:])) or (first_char_matches and is_match(s[1:], p))\n",
+    "    \n",
+    "    else:\n",
+    "        return first_char_matches and is_match(s[1:], p[1:])\n",
+    "\n",
+    "is_match(s=\"aa\", p=\"a*\")"
    ]
   },
   {
