--- a/2203/examprep/finalterm.ipynb
+++ b/2203/examprep/finalterm.ipynb
@@ -203,7 +203,7 @@
     "\n",
     "1. **Increased Computational Complexity**: As the number of dimensions (features) in a dataset increases, the computational complexity of algorithms grows exponentially. \n",
     "\n",
-    "2. **Sparse Data**: In high-dimensional spaces, data points become sparse. This sparsity means that data points are spread out far from each other, making it difficult to find patterns or meaningful clusters. This *sparsity can lead to overfitting*, as models may capture noise rather than true underlying patterns.\n",
+    "2. **Sparse Data**: In high-dimensional spaces, data points become sparse. This sparsity means that data points are spread out far from each other, making it difficult to find patterns or meaningful clusters. This **sparsity can lead to overfitting**, as models may capture noise rather than true underlying patterns.\n",
     "\n",
     "3. **Distance Metrics**: Many machine learning algorithms rely on distance metrics (like Euclidean distance) to make predictions. In high-dimensional spaces, the distance between points becomes less meaningful because all points tend to be equidistant from each other. This diminishes the effectiveness of algorithms based on these metrics.\n",
     "\n",
@@ -354,7 +354,7 @@
     "### LDA (Linear Discriminant Analysis)\n",
     "\n",
     "- Supervised \n",
-    "- In LDA, we have the additional goal of maximizing the differences between classes.\n",
+    "- In LDA, we have the **additional goal of maximizing the differences between classes**.\n",
     "- It basically looks at what type of features subspace gives more discrimination to separate the data\n",
     "\n",
     "![](brandbird.gif)"
