--- a/2203/examprep/mid_term.ipynb
+++ b/2203/examprep/mid_term.ipynb
@@ -1401,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1437,14 +1437,11 @@
     "    [51,52,53,54,55]\n",
     "                    ])\n",
     "\n",
-    "# basics \n",
-    "# axis=0 typically refers to columns.\n",
-    "# axis=1 typically refers to rows\n",
     "\n",
     "\n",
     "print(np.max(array))\n",
-    "print(np.max(array, axis=0))\n",
-    "print(np.max(array, axis=1))\n",
+    "print(np.max(array, axis=0)) # rows \n",
+    "print(np.max(array, axis=1)) # columns \n",
     "\n",
     "# mean \n",
     "print(np.mean(array))\n",
@@ -1455,6 +1452,8 @@
     "# standard Deviation \n",
     "print(np.std(array))\n",
     "\n",
+    "\n",
+    "############### ANY MATHEMATICAL FUNCTION MA axis = 0 : COlumn ###################\n",
     "# mean along the certain axis \n",
     "print(np.mean(array, axis= 0))\n",
     "print(np.mean(array, axis= 1))\n",
@@ -1479,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1494,27 +1493,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[13 14 15]\n",
+      " [23 24 25]\n",
+      " [33 34 35]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(array[:3, 2:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[41 42 43 44 45]\n",
+      " [51 52 53 54 55]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(array[3:,:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12 13 15]\n",
+      " [21 23 25]\n",
+      " [31 33 35]\n",
+      " [41 43 45]\n",
+      " [51 53 55]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(array[:,::2])"
    ]
@@ -1528,9 +1558,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([4]), array([4]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get index of 55\n",
     "np.where(array == 55)"
@@ -1835,7 +1876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1853,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1863,17 +1904,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['admin', 'config', 'local', 'test']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# listing all the database \n",
     "databases = client.list_database_names()\n",
@@ -1931,9 +1964,9 @@
     }
    ],
    "source": [
-    "# list the tables on the database \n",
-    "collections = db.list_collection_names()\n",
-    "print(f\"Collections : {collections}\") "
+    "#  db.list_collection_names()\n",
+    "print(f\"Collections : {collections}list the tables on the database \n",
+    "collections =\") "
    ]
   },
   {
