--- a/2203/examprep/outliers.ipynb
+++ b/2203/examprep/outliers.ipynb
@@ -377,6 +377,9 @@
     "# removing outliers\n",
     "df_copy.drop(index, inplace = True)\n",
     "print(f\"Number of records in the table: {df_copy.shape}\")\n",
+    "\n",
+    "\n",
+    "# new_df = df[(df[\"SalePrice\"]>lower_whisker) & (df[\"SalePrice\"]<upper_whisker)]\n",
     "\n"
    ]
   },
