--- a/2203/examprep/regression.ipynb
+++ b/2203/examprep/regression.ipynb
@@ -499,7 +499,7 @@
     "$$\n",
     "\n",
     "- You have many features, and you suspect that only a few of them are truly relevant to the response variable.\n",
-    "- You want to perform feature selection, i.e., drive some coefficients exactly to zero, thus eliminating them from the model.\n",
+    "- You want to ***perform feature selection***, i.e., ***drive some coefficients exactly to zero***, thus eliminating them from the model.\n",
     "\n"
    ]
   },
@@ -568,8 +568,8 @@
     "\n",
     "When to use: \n",
     "\n",
-    "- You have many features, and most of them are believed to have a small effect on the response variable.\n",
-    "- Your goal is to handle multicollinearity by shrinking the coefficients of correlated variables.\n",
+    "- You have **many features**, and **most of them are believed to have a small effect** on the response variable.\n",
+    "- Your goal is to handle **multicollinearity** by shrinking the coefficients of correlated variables.\n",
     "\n",
     "- Does not perform feature selection; all coefficients are shrunk towards zero but none are eliminated."
    ]
