--- a/2203/practice.ipynb
+++ b/2203/practice.ipynb
@@ -1473,47 +1473,552 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3 \n",
+    "conn = sqlite3.connect(\":memory:\")\n",
+    "cursor = conn.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f0da2aa8a40>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SQL = \"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS RAJAN( \n",
+    "NAME CHAR(20),\n",
+    "AGE INT\n",
+    ");\n",
+    "\"\"\"\n",
+    "\n",
+    "cursor.execute(SQL)\n",
+    "conn.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x7f0da2aa8a40>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "INTERT = \"\"\"\n",
+    "INSERT INTO RAJAN (NAME, AGE)\n",
+    "VALUES (?,?)\n",
+    "\"\"\"\n",
+    "cursor.execute(INTERT,(\"Rajj\",20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(NE Rajan/NNP)\n",
-      "(NE Rajan/NNP)\n"
+      "('Rajj', 20)\n"
      ]
     }
    ],
    "source": [
-    "sentences = sent_tokenize(text)\n",
-    "words = [word_tokenize(x) for x in sentences]\n",
-    "\n",
-    "post_tags = nltk.pos_tag_sents(words)\n",
-    "\n",
-    "ner_tags = nltk.ne_chunk_sents(post_tags, binary=True)\n",
-    "\n",
-    "for x in ner_tags:\n",
-    "    for y in x:\n",
-    "        if hasattr(y,\"label\"):\n",
-    "            if y.label() == \"NE\":\n",
-    "                print(y)"
+    "SELECT = \"SELECT * FROM RAJAN WHERE AGE = ?\"\n",
+    "res = cursor.execute(SELECT,(\"20\",))\n",
+    "res = cursor.fetchone()\n",
+    "print(res)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Test:\n",
-    "    def __init__(self) -> None:\n",
-    "        self.x = \"GAY\""
+    "UPDATE = \"\"\"\n",
+    "UPDATE RAJAN \n",
+    "SET AGE = ? \n",
+    "WHERE NAME = ?\n",
+    "\n",
+    "\"\"\"\n",
+    "res = cursor.execute(UPDATE, (69,\"RAJAN\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gender</th>\n",
+       "      <th>education_level</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>male</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>male</td>\n",
+       "      <td>college</td>\n",
+       "      <td>82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>female</td>\n",
+       "      <td>college</td>\n",
+       "      <td>88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>female</td>\n",
+       "      <td>graduate</td>\n",
+       "      <td>95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>male</td>\n",
+       "      <td>high school</td>\n",
+       "      <td>69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>female</td>\n",
+       "      <td>graduate</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>male</td>\n",
+       "      <td>college</td>\n",
+       "      <td>78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>female</td>\n",
+       "      <td>graduate</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gender education_level  score\n",
+       "0    male     high school     75\n",
+       "1    male         college     82\n",
+       "2  female         college     88\n",
+       "3  female        graduate     95\n",
+       "4    male     high school     69\n",
+       "5  female        graduate     92\n",
+       "6    male         college     78\n",
+       "7  female        graduate     85"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# create a sample dataset\n",
+    "df = pd.DataFrame({\n",
+    "    'gender': ['male', 'male', 'female', 'female', 'male', 'female', 'male', 'female'],\n",
+    "    'education_level': ['high school', 'college', 'college', 'graduate', 'high school', 'graduate', 'college', 'graduate'],\n",
+    "    'score': [75, 82, 88, 95, 69, 92, 78, 85]\n",
+    "})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>education_level</th>\n",
+       "      <th>college</th>\n",
+       "      <th>graduate</th>\n",
+       "      <th>high school</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>gender</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>female</th>\n",
+       "      <td>0.492537</td>\n",
+       "      <td>0.507463</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>male</th>\n",
+       "      <td>0.526316</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.473684</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "education_level   college  graduate  high school\n",
+       "gender                                          \n",
+       "female           0.492537  0.507463     0.000000\n",
+       "male             0.526316  0.000000     0.473684"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(index=df.gender, columns=df.education_level, values=df.score, aggfunc=\"mean\",normalize=\"index\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client = MongoClient(\"mongodb://172.24.0.1:27017\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['admin', 'config', 'local', 'test']\n"
+     ]
+    }
+   ],
+   "source": [
+    "database = client.list_database_names()\n",
+    "print(database)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the db \n",
+    "database = client[\"test\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['employee', 'exam_prep_explicit', 'exam_prep']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "database.list_collection_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a new collection \n",
+    "collection = database[\"final_prep\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_details = {\n",
+    "    'Name':'Prajwal Luitel',\n",
+    "    \"Address\":\"Toronto, ON, CA\",\n",
+    "    \"Age\":\"23\"\n",
+    "}\n",
+    "\n",
+    "result = collection.insert_one(employee_details)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Viola', 'address': 'Sideway Ave'}"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.find_one({\"name\": \"Viola\"},{\"_id\" : 0})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': 7, 'name': 'Nicky', 'address': 'Yellow Garden 23'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "query = {\n",
+    "    \n",
+    "    \"$and\" : [\n",
+    "        \n",
+    "        {\"_id\" : {\"$gt\" : 1, \"$lte\" : 7}},\n",
+    "        {\"name\": {\"$regex\": \"^N[a-z]+\"}}\n",
+    "    ]\n",
+    "}\n",
+    "\n",
+    "cur = collection.find(query)\n",
+    "\n",
+    "for r in cur:\n",
+    "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = [7,1,5,3,6,4]\n",
+    "\n",
+    "def best_profit( x : list) -> int: \n",
+    "    \n",
+    "    \"\"\"_summary_\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # define two variables \n",
+    "    min_invest = float(\"inf\")\n",
+    "    max_profit = 0\n",
+    "    \n",
+    "    for i in range( len(x)- 1):\n",
+    "        \n",
+    "        # check if the current gives min investement \n",
+    "        if min_invest > x[i]:\n",
+    "            min_invest = x[i]\n",
+    "            \n",
+    "        if (x[i] - min_invest) > max_profit:\n",
+    "            max_profit = (x[i] - min_invest)\n",
+    "            \n",
+    "    \n",
+    "    return max_profit\n",
+    "            \n",
+    "best_profit(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_summary_range(input_list : list) -> list: \n",
+    "    \n",
+    "    \n",
+    "    i = 0\n",
+    "    result = []\n",
+    "    while i < len(input_list):\n",
+    "        start = input_list[i]\n",
+    "        \n",
+    "        while i < len(input_list) - 1 and (input_list[i] + 1 == input_list[i+1]):\n",
+    "            i += 1\n",
+    "            \n",
+    "        if start != input_list[i]:\n",
+    "            result.append(f\"{start}->{input_list[i]}\")\n",
+    "        \n",
+    "        else:\n",
+    "            result.append(str(start))\n",
+    "            \n",
+    "        i += 1\n",
+    "            \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['0->4', '6->9', '11']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_summary_range([0,1,2,3,4,6,7,8,9,11])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'flo'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def longest_prefix( p : list): \n",
+    "    \n",
+    "    # get the minimum length \n",
+    "    min_len = sorted(p, key=len)[0]\n",
+    "    \n",
+    "    for i , character in enumerate(min_len):\n",
+    "        for word in p: \n",
+    "            if word[i] != character:\n",
+    "                return min_len[:i]\n",
+    "            \n",
+    "    return min_len\n",
+    "input_string = [\"flower\",\"flow\", \"flo\", \"floor\"]\n",
+    "longest_prefix(input_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1522,23 +2027,87 @@
        "True"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y = Test()\n",
-    "hasattr(y, \"x\")"
+    "def check_sub_sequence(s, t): \n",
+    "    \n",
+    "    # check if s is subseq of t \n",
+    "    S = len(s)\n",
+    "    T = len(t)\n",
+    "    \n",
+    "    if S > T : return False\n",
+    "    \n",
+    "    j = 0\n",
+    "    for i in range(T):\n",
+    "        if s[j] == t[i]: \n",
+    "            \n",
+    "            if j == S -1 : \n",
+    "                return True\n",
+    "            \n",
+    "            j += 1 \n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "check_sub_sequence(\"abc\",\"aebdc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a1b2c34'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from collections import Counter"
+    "def merge_alteratively(string1,string2):\n",
+    "    \n",
+    "    A = len(string1)\n",
+    "    \n",
+    "    B = len(string2)\n",
+    "    \n",
+    "    which_string  = 1 \n",
+    "    \n",
+    "    a, b = 0, 0\n",
+    "    \n",
+    "    result = []\n",
+    "    \n",
+    "    while a < A and b < B:\n",
+    "        \n",
+    "        if which_string == 1:\n",
+    "            result.append(string1[a])\n",
+    "            a += 1 \n",
+    "            which_string = 2\n",
+    "        else:\n",
+    "            result.append(string2[b])\n",
+    "            b += 1 \n",
+    "            which_string = 1\n",
+    "            \n",
+    "    \n",
+    "    while a < A:\n",
+    "        result.append(string1[a])\n",
+    "        a += 1\n",
+    "        \n",
+    "    while b < B:\n",
+    "        result.append(string2[b])\n",
+    "        b += 1 \n",
+    "        \n",
+    "    return \"\".join(result)\n",
+    "\n",
+    "\n",
+    "merge_alteratively(\"abc\",\"1234\")"
    ]
   },
   {
@@ -1547,8 +2116,111 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import "
+    "def check_ugly(number : int) -> bool: \n",
+    "    \n",
+    "    # get all the prime factors \n",
+    "    p_f = \n",
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prime_factors(number): \n",
+    "    \n",
+    "    i = 2 \n",
+    "    factors = []\n",
+    "    while number > 1: \n",
+    "        \n",
+    "        if number % i == 0: \n",
+    "            factors.append(i)\n",
+    "            number = number / i \n",
+    "            \n",
+    "            i = i -1 \n",
+    "    \n",
+    "        i += 1 \n",
+    "        \n",
+    "    return factors\n",
+    "        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_prime_factors(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_prime_factor(number : int): \n",
+    "    \n",
+    "    # if not int, raise error \n",
+    "    assert isinstance(number, int), \"The given number should be an integer.\"\n",
+    "    \n",
+    "    # list to store the prime factors \n",
+    "    factors = []\n",
+    "    \n",
+    "    i=2\n",
+    "    # until number becomes one loop\n",
+    "    while number>1:\n",
+    "        # if number remainder becomes 0, procceed to another: \n",
+    "        if number%i==0:\n",
+    "            factors.append(i)\n",
+    "            number=number/i\n",
+    "            \n",
+    "            i=i-1\n",
+    "        i+=1  \n",
+    "    return factors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 2, 3]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_prime_factor(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1567,7 +2239,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.undefined"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
