--- a/2203/weekly_assignments/week10.ipynb
+++ b/2203/weekly_assignments/week10.ipynb
@@ -58,9 +58,11 @@
     "    \n",
     "            \n",
     "            result[i+j] += digit\n",
-    "            result[i+j+1] += (result[i+j] // 10)\n",
-    "            result[i+j] = result[i+j] % 10\n",
-    "\n",
+    "            # result[i+j+1] += (result[i+j] // 10)\n",
+    "            carry, remaining = divmod(result[i+j], 10)\n",
+    "            result[i+j+1] += carry\n",
+    "            result[i+j] = remaining\n",
+    "            \n",
     "    result = result[::-1]\n",
     "    if result[0] == 0:\n",
     "        result = result[1:]\n",
@@ -109,8 +111,7 @@
     "    count = 1\n",
     "    for i in range(len(s)-1):\n",
     "        if s[i] == s[i+1]:\n",
-    "            count +=1\n",
-    "            \n",
+    "            count +=1 \n",
     "        else:\n",
     "            result = result + str(count) + str(s[i])\n",
     "            count = 1\n",
