--- a/2203/weekly_assignments/week11.ipynb
+++ b/2203/weekly_assignments/week11.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -136,11 +136,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "def isMatch(s: str, p: str) -> bool:\n",
+    "    # Base case: If the pattern is empty, the string must also be empty\n",
+    "    if not p:\n",
+    "        return not s\n",
+    "    \n",
+    "    # Check if the first character of the string matches the first character of the pattern\n",
+    "    first_match = bool(s) and p[0] in {s[0], '.'}\n",
+    "    \n",
+    "    # If the pattern contains '*', it can either match zero or more of the preceding character\n",
+    "    if len(p) >= 2 and p[1] == '*':\n",
+    "        return (isMatch(s, p[2:]) or (first_match and isMatch(s[1:], p)))  \n",
+    "    else:\n",
+    "        return first_match and isMatch(s[1:], p[1:])\n",
+    "\n",
+    "print(isMatch(s=\"aa\", p=\"a*\"))\n",
+    "print(isMatch(s=\"aaaaaaaaaa\", p=\"a*\"))\n",
+    "print(isMatch(s=\"aaaab\", p=\"a*\"))\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Q3- A permutation of an array of integers is an arrangement of its members into a sequence or linear order.\n",
-    "\n",
+    "# \n",
     "For example, for arr = [1,2,3], the following are considered permutations of arr: [1,2,3], [1,3,2], [3,1,2], [2,3,1].\n",
     "The next permutation of an array of integers is the next lexicographically greater permutation of its integer. More formally, if all the permutations of the array are sorted in one container according to their lexicographical order, then the next permutation of that array is the permutation that follows it in the sorted container. If such arrangement is not possible, the array must be rearranged as the lowest possible order (i.e., sorted in ascending order).\n",
     "\n",
@@ -159,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +237,163 @@
     "nums = [1, 2, 3]\n",
     "integerpermute(nums)\n",
     "print(nums)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "not found\n",
+      "not found\n",
+      "not found\n",
+      "dict_values([['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']])\n"
+     ]
+    }
+   ],
+   "source": [
+    "strs = [\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"]\n",
+    "\n",
+    "def grp_anagrams(strs : list):\n",
+    "    \n",
+    "    mapper = {}\n",
+    "    \n",
+    "    for item in strs: \n",
+    "        \n",
+    "        key = tuple(sorted(item))\n",
+    "    \n",
+    "        if key in mapper:\n",
+    "            # get the list \n",
+    "            item_list = mapper[key]\n",
+    "            item_list.append(item)\n",
+    "            mapper[key] = item_list\n",
+    "        else:\n",
+    "            print(\"not found\")\n",
+    "            mapper[key] = [item]\n",
+    "            \n",
+    "\n",
+    "    return mapper.values()\n",
+    "    \n",
+    "print(grp_anagrams(strs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = {(1,2,3): 5, (4,5,6): 7}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1,2,3) in x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = [10,2]\n",
+    "from itertools import permutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "per = permutations(nums)\n",
+    "per = list(per)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "210\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = float(\"-inf\")\n",
+    "\n",
+    "for item in per:\n",
+    "    \n",
+    "    item = list(item)\n",
+    "    sum_item =int(\"\".join(map(str,item)))\n",
+    "    \n",
+    "    if sum_item > sum:\n",
+    "        sum = sum_item\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 30, 34, 5, 9]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[3, 30, 34, 5, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3303459"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int(\"\".join(map(str,[3, 30, 34, 5, 9])))"
    ]
   },
   {
