--- a/2304/midtermpreparation.ipynb
+++ b/2304/midtermpreparation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,16 +311,16 @@
     "- `[^aeiou]` :  The ^ inverts the selection, so this matches any character except the specified ones (consonants in this case).\n",
     "- `[a-f]`: Matches any one character in the specified range.\n",
     "- `\\d` : Matches any digit, equivalent to [0-9].\n",
-    "- `\\D` :  Matches any non-digit, equivalent to `[^0-9]` or `[^\\\\d]`.\n",
+    "- `\\D` :  Matches any non-digit, equivalent to `^[0-9]` .\n",
     "- `\\w` : Matches any word character `(alphanumeric and underscore)`, equivalent to [a-zA-Z0-9_].\n",
-    "- `\\W`: Matches any non-word character, equivalent to [^a-zA-Z0-9_] or `[^\\\\w]`.\n",
-    "- `\\s`: Matches any whitespace character, including space, tab, newline, carriage return, form feed, and vertical tab. Equivalent to `[\\ \\t\\n\\r\\f\\v]`.\n",
-    "- `\\S`: Matches any character that is not a whitespace character. Equivalent to `[^\\ \\t\\n\\r\\f\\v]` or `[^\\s]`.\n"
+    "- `\\W`: Matches any non-word character, equivalent to [^a-zA-Z0-9_] or .\n",
+    "- `\\s`: Matches any whitespace character, including space, tab, newline, carriage return, form feed, and vertical tab. .\n",
+    "- `\\S`: Matches any character that is not a whitespace character. Equivalent to `[^\\ \\t\\n\\r\\f\\v]` .\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -331,6 +331,7 @@
       "['h', 'l', 'l', ' ', 'w', 'r', 'l', 'd']\n",
       "['a', 'b', 'c', 'd', 'e', 'f']\n",
       "['1', '2', '3']\n",
+      "['a', 'b', 'c', 'x', 'y', 'z']\n",
       "['a', 'b', 'c', 'x', 'y', 'z']\n",
       "['h', 'e', 'l', 'l', 'o', '_', 'w', 'o', 'r', 'l', 'd', '1', '2', '3']\n",
       "[' ', '!']\n",
@@ -345,6 +346,7 @@
     "print(re.findall(r'[a-f]', 'abcdefgxyz')) # ['a', 'b', 'c', 'd', 'e', 'f']\n",
     "print(re.findall(r'\\d', 'abc123xyz')) # ['1', '2', '3']\n",
     "print(re.findall(r'\\D', 'abc123xyz')) # ['a', 'b', 'c', 'x', 'y', 'z']\n",
+    "print(re.findall(r'[^\\d]', 'abc123xyz')) # ['a', 'b', 'c', 'x', 'y', 'z']\n",
     "print(re.findall(r'\\w', 'hello_world 123!')) # ['h', 'e', 'l', 'l', 'o', '_', 'w', 'o', 'r', 'l', 'd', '1', '2', '3']\n",
     "print(re.findall(r'\\W', 'hello_world 123!')) # [' ', '!']\n",
     "print(re.findall(r'\\s', 'hello world\\t123\\n'))  # [' ', '\\t', '\\n']\n",
@@ -962,7 +964,7 @@
     }
    ],
    "source": [
-    "english_stopwords = stopwords.words('english')\n",
+    "english_stopwords = stopwords.words('english')   ###### stopwords.words ##########\n",
     "print(f\"There are {len(english_stopwords)} stopwords in English\")\n",
     "print(english_stopwords[:10])"
    ]
@@ -1113,7 +1115,7 @@
    "source": [
     "# Some important arguments in Count Vectorizer; \n",
     "ngram_range=(1,3) # N-Gram of length 1-3\n",
-    "min_df=0.2 # Repeated atleast twice \n",
+    "min_df=2 # Repeated atleast twice \n",
     "max_df=0.9 # Occurs in more than 90% of the document."
    ]
   },
@@ -1593,10 +1595,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['Rajan', 'Ghimire', 'worked', 'for', 'Google', 'and', 'attended', 'meeting', 'in', 'Kathmandu', '.'], ['I', 'study', 'in', 'Lambton', 'College', 'in', 'Toronto', '.']]\n",
+      "[[('Rajan', 'NNP'), ('Ghimire', 'NNP'), ('worked', 'VBD'), ('for', 'IN'), ('Google', 'NNP'), ('and', 'CC'), ('attended', 'VBD'), ('meeting', 'NN'), ('in', 'IN'), ('Kathmandu', 'NNP'), ('.', '.')], [('I', 'PRP'), ('study', 'VBP'), ('in', 'IN'), ('Lambton', 'NNP'), ('College', 'NNP'), ('in', 'IN'), ('Toronto', 'NNP'), ('.', '.')]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import nltk\n",
+    "\n",
     "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "\n",
     "my_string = \"Rajan Ghimire worked for Google and attended meeting in Kathmandu. I study in Lambton College in Toronto.\"\n",
@@ -1606,10 +1619,12 @@
     "\n",
     "# apply word tokneizer \n",
     "words = [word_tokenize(x) for x in sentences]\n",
+    "print(words)\n",
     "\n",
     "# apply pos tagger ? Why pos \n",
     "pos = [nltk.pos_tag(x) for x in words]\n",
     "\n",
+    "print(pos)\n",
     "# get ner chunks named entity : chunker to chunk the given list of tagged sentences\n",
     "chunked_sentences = nltk.ne_chunk_sents(pos, binary=True)\n",
     "\n",
@@ -1926,7 +1941,10 @@
     "\n",
     "$$PMI(w^1,w^2,w^3)=log_2\\frac{P(w^1,w^2,w^3)}{P(w^1)P(w^2)P(w^3)}$$\n",
     "\n",
-    "- The main intuition is that it measures how much more likely the words co-occur than if they were independent.\n",
+    "- Eaklai aaune vanda sangai aaune chance kati xa?\n",
+    "\n",
+    "\n",
+    "- The main intuition is that it `measures how much more likely the words co-occur than if they were independent`.\n",
     "- However, it is very sensitive to rare combination of words. \n",
     "- For example, if a random bigram ‘abc xyz’ appears, and neither ‘abc’ nor ‘xyz’ appeared anywhere else in the text, ‘abc xyz’ will be identified as highly significant bigram when it could just be a random misspelling or a phrase too rare to generalize as a bigram. Therefore, this method is often used with a frequency filter."
    ]
@@ -2104,7 +2122,7 @@
     "- Synset: It is also called as synonym set or collection of synonym words\n",
     "\n",
     "Wordnet: \n",
-    "- WordNet is a large lexical database of English. Nouns, verbs, adjectives and adverbs are grouped into sets of cognitive synonyms (synsets), each expressing a distinct concept. \n",
+    "- WordNet is a large lexical database of English. Nouns, verbs, adjectives and adverbs are grouped into sets of `cognitive synonyms (synsets)`, each expressing a distinct concept. \n",
     "- Synsets are interlinked by means of `conceptual-semantic` and `lexical relations`.\n",
     "- WordNet superficially resembles a thesaurus, in that it groups words together based on their meanings. But there are some differences: \n",
     "  \n",
@@ -2159,26 +2177,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "word --> synsests --> synset[0] --> lemmas --> lemma[0] --> lemma.antonyms() --> anotnums --> anotnums[0].name()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_synonym_antonym(word):\n",
+    "# def find_synonym_antonym(word):\n",
     "    \n",
-    "    synonym = []\n",
-    "    antonym = []\n",
+    "#     synonym = []\n",
+    "#     antonym = []\n",
     "    \n",
-    "    for synset_object in wordnet.synsets(word):\n",
-    "        for lemma in synset_object.lemmas():\n",
-    "            synonym.append(lemma.name())\n",
+    "#     for synset_object in wordnet.synsets(word):\n",
+    "#         for lemma in synset_object.lemmas():\n",
+    "#             synonym.append(lemma.name())\n",
     "            \n",
-    "            if lemma.antonyms():\n",
-    "                for ant in lemma.antonyms():\n",
-    "                    antonym.append(ant.name())\n",
+    "#             if lemma.antonyms():\n",
+    "#                 for ant in lemma.antonyms():\n",
+    "#                     antonym.append(ant.name())\n",
     "                    \n",
     "    \n",
-    "    return set(synonym), set(antonym)"
+    "#     return set(synonym), set(antonym)\n",
+    "\n",
+    "\n",
+    "\n",
+    "def find_syn_antyn(word): \n",
+    "    syn =[]\n",
+    "    anto = []\n",
+    "    synsets = wordnet.synsets(word)\n",
+    "    for synset in  synsets: \n",
+    "        lemmas = synset.lemmas()\n",
+    "        for lemma in lemmas:\n",
+    "            syn.append(lemma.name())\n",
+    "\n",
+    "            if lemma.antonyms():\n",
+    "                antonymns = lemma.antonyms()\n",
+    "                for ant in antonymns:\n",
+    "                    anto.append(ant.name())\n",
+    "    \n",
+    "    return syn, anto"
    ]
   },
   {
@@ -2329,9 +2372,9 @@
    "source": [
     "- Valence Aware Dictionary and sEntiment Reasoner\n",
     "- rule-based sentiment analysis tool that is specifically designed for analyzing social media texts.\n",
-    "- Vader uses a dictionary of words and rules to determine the sentiment of a piece of text\n",
-    "- It uses a valence score for each word to determine its positivity or negativity. The valence score ranges from -4 to +4, with -4 being the most negative and +4 being the most positive.\n",
-    "- Vader also takes into account the intensity of the sentiment, which can be determined by capitalization and punctuation. For example, all caps or exclamation marks can indicate a stronger sentiment.\n",
+    "- Vader uses a `dictionary of words` and `rules` to determine the sentiment of a piece of text\n",
+    "- It uses a valence score for each word to determine its positivity or negativity. The valence score ranges from `-4 to +4`, with -4 being the most negative and +4 being the most positive.\n",
+    "- Vader also takes into account the `intensity of the sentiment`, which can be determined by capitalization and punctuation. For example, all caps or exclamation marks can indicate a stronger sentiment.\n",
     "\n",
     "The Compound score is a metric that calculates the sum of all the lexicon ratings which have been normalized between -1(most extreme negative) and +1 (most extreme positive). \n",
     "- positive sentiment : (compound score >= 0.05)\n",
@@ -2446,7 +2489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "undefined.undefined.undefined"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
