--- a/2304/rough.ipynb
+++ b/2304/rough.ipynb
@@ -653,6 +653,416 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk \n",
+    "from nltk.tokenize import word_tokenize, sent_tokenize\n",
+    "\n",
+    "\n",
+    "word=\"I am Rajan. I live in Canada.\"\n",
+    "\n",
+    "sent_toks = sent_tokenize(word)\n",
+    "\n",
+    "word_toks = [ word_tokenize(x) for x in sent_toks]\n",
+    "\n",
+    "pos_tags = [nltk.pos_tag(x) for x in word_toks]\n",
+    "\n",
+    "ner_tags = nltk.ne_chunk_sents(pos_tags, binary=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(NE Rajan/NNP)\n",
+      "(NE Canada/NNP)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for tags in ner_tags:\n",
+    "    for tag in tags:\n",
+    "        if hasattr(tag, \"label\") and tag.label() ==\"NE\": \n",
+    "            print(tag)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[']', 'cameraman', ':', 'christ', '!']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package webtext to /home/rjn/nltk_data...\n",
+      "[nltk_data]   Package webtext is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "import pandas as pd\n",
+    "\n",
+    "nltk.download('webtext')\n",
+    "\n",
+    "from nltk.corpus import webtext\n",
+    "\n",
+    "words = [w.lower() for w in webtext.words('grail.txt')]\n",
+    "\n",
+    "print(words[-5:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(\"'\", 's'), ('arthur', ':'), ('#', '1'), (\"'\", 't'), ('villager', '#')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.collocations import BigramCollocationFinder, BigramAssocMeasures\n",
+    "\n",
+    "bigram_finder = BigramCollocationFinder.from_words(words=words)\n",
+    "\n",
+    "bigram_finder.apply_freq_filter(5)\n",
+    "\n",
+    "filtered = bigram_finder.nbest(score_fn=BigramAssocMeasures.likelihood_ratio, n=5)\n",
+    "\n",
+    "print(filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "stopsets = set(stopwords.words('english'))\n",
+    "\n",
+    "filter_stopwords = lambda x : x in stopsets or len(x) < 3\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigram_finder = BigramCollocationFinder.from_words(words)\n",
+    "\n",
+    "bigram_finder.apply_word_filter(fn=filter_stopwords)\n",
+    "\n",
+    "bigram_finder.apply_freq_filter(min_freq=5)\n",
+    "\n",
+    "filtered = bigram_finder.nbest(score_fn=BigramAssocMeasures.pmi, n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('dramatic', 'chord'),\n",
+       " ('dona', 'eis'),\n",
+       " ('eis', 'requiem'),\n",
+       " ('hand', 'grenade'),\n",
+       " ('angels', 'sing')]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123-5671', '1234']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re \n",
+    "x = \"123-5671 and 1234\"\n",
+    "capture = r\"(?:[\\d]+)?-?(?:\\d{4})\"\n",
+    "re.findall(capture,x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import wordnet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "syns = wordnet.synsets(\"good\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Synset('good.n.01'),\n",
+       " Synset('good.n.02'),\n",
+       " Synset('good.n.03'),\n",
+       " Synset('commodity.n.01'),\n",
+       " Synset('good.a.01'),\n",
+       " Synset('full.s.06'),\n",
+       " Synset('good.a.03'),\n",
+       " Synset('estimable.s.02'),\n",
+       " Synset('beneficial.s.01'),\n",
+       " Synset('good.s.06'),\n",
+       " Synset('good.s.07'),\n",
+       " Synset('adept.s.01'),\n",
+       " Synset('good.s.09'),\n",
+       " Synset('dear.s.02'),\n",
+       " Synset('dependable.s.04'),\n",
+       " Synset('good.s.12'),\n",
+       " Synset('good.s.13'),\n",
+       " Synset('effective.s.04'),\n",
+       " Synset('good.s.15'),\n",
+       " Synset('good.s.16'),\n",
+       " Synset('good.s.17'),\n",
+       " Synset('good.s.18'),\n",
+       " Synset('good.s.19'),\n",
+       " Synset('good.s.20'),\n",
+       " Synset('good.s.21'),\n",
+       " Synset('well.r.01'),\n",
+       " Synset('thoroughly.r.02')]"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "syns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Lemma('good.n.02.good'), Lemma('good.n.02.goodness')]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "syns[1].lemmas()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(['good',\n",
+       "  'good',\n",
+       "  'goodness',\n",
+       "  'good',\n",
+       "  'goodness',\n",
+       "  'commodity',\n",
+       "  'trade_good',\n",
+       "  'good',\n",
+       "  'good',\n",
+       "  'full',\n",
+       "  'good',\n",
+       "  'good',\n",
+       "  'estimable',\n",
+       "  'good',\n",
+       "  'honorable',\n",
+       "  'respectable',\n",
+       "  'beneficial',\n",
+       "  'good',\n",
+       "  'good',\n",
+       "  'good',\n",
+       "  'just',\n",
+       "  'upright',\n",
+       "  'adept',\n",
+       "  'expert',\n",
+       "  'good',\n",
+       "  'practiced',\n",
+       "  'proficient',\n",
+       "  'skillful',\n",
+       "  'skilful',\n",
+       "  'good',\n",
+       "  'dear',\n",
+       "  'good',\n",
+       "  'near',\n",
+       "  'dependable',\n",
+       "  'good',\n",
+       "  'safe',\n",
+       "  'secure',\n",
+       "  'good',\n",
+       "  'right',\n",
+       "  'ripe',\n",
+       "  'good',\n",
+       "  'well',\n",
+       "  'effective',\n",
+       "  'good',\n",
+       "  'in_effect',\n",
+       "  'in_force',\n",
+       "  'good',\n",
+       "  'good',\n",
+       "  'serious',\n",
+       "  'good',\n",
+       "  'sound',\n",
+       "  'good',\n",
+       "  'salutary',\n",
+       "  'good',\n",
+       "  'honest',\n",
+       "  'good',\n",
+       "  'undecomposed',\n",
+       "  'unspoiled',\n",
+       "  'unspoilt',\n",
+       "  'good',\n",
+       "  'well',\n",
+       "  'good',\n",
+       "  'thoroughly',\n",
+       "  'soundly',\n",
+       "  'good'],\n",
+       " ['evil', 'evilness', 'bad', 'badness', 'bad', 'evil', 'ill'])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def find_syn_antyn(word): \n",
+    "    syn =[]\n",
+    "    anto = []\n",
+    "    synsets = wordnet.synsets(word)\n",
+    "    for synset in  synsets: \n",
+    "        lemmas = synset.lemmas()\n",
+    "        for lemma in lemmas:\n",
+    "            syn.append(lemma.name())\n",
+    "\n",
+    "            if lemma.antonyms():\n",
+    "                antonymns = lemma.antonyms()\n",
+    "                for ant in antonymns:\n",
+    "                    anto.append(ant.name())\n",
+    "    \n",
+    "    return syn, anto\n",
+    "            \n",
+    "            \n",
+    "find_syn_antyn(\"good\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "match = re.search(r'(.)\\1+', \"Raaaaajan\")\n",
+    "if match:\n",
+    "    print(match.group(0))  # group(0) returns the whole match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<re.Match object; span=(0, 8), match='Rajan123'>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "/tmp/ipykernel_35098/2246239866.py:1: SyntaxWarning: invalid escape sequence '\\w'\n",
+      "  print(re.search(\"\\w+\",\"Rajan123\"))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.search(\"\\w+\",\"Rajan123\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
